--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>  
     <div id="app">
-      <div id="chat_container"></div>
+      <div id="chat_container">
+      </div>
 
       <form>
         <textarea name="prompt" rows="1" cols="1" placeholder="Ask VerzAI...">
@@ -17,6 +18,16 @@
         <button type="submit"><img src="assets/send.svg" alt="Send" /></button>
       </form>
     </div>
-    <script type="module" src="script.js"></script>
+
+  <footer>To turn your logo idea into a visiual img~~~>
+    <div class="navbar">
+      <ul>
+        <li>
+          <a href="https://phrasiusi.blufitech.com" target="_blank" rel="noopener">Phrasius I</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+   <script type="module" src="script.js"></script>
   </body>
 </html>
