--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>  
+    <h1>Tell VerzAI details of your business idea:</h1>
     <div id="app">
       <div id="chat_container">
       </div>
